fix landslide/earthquake ratio api and add number of earthquake api
